# ckks-computer

./: CMakeLists.txt  README.md  eprint-iacr-2025-066.md
bench/: bench_integer_computer.cpp
src/: ckks_computer.cpp  ckks_computer.hpp  main.cpp  openfhe_compat.hpp
tests/: test_integer_computer.cpp
